samples/concept/invalid/R3.dita
<?xml version="1.0" encoding="UTF-8"?>
<concept id="c_r3_inv">
  <title>R3 Invalid Title</title>
  <prolog/>
  <conbody>
    <p>This concept is missing a shortdesc element.</p>
  </conbody>
</concept>